--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,3 +153,81 @@ footer {
     line-height: 95px;
     color: #cccccc;
 }
+
+.hangman {
+    background-image: url("http://lorempixel.com/g/275/205/");
+    width: 275px;
+    height: 205px;
+    float: left;
+    border: 0;
+}
+
+.hangman:nth-child(2) {
+    margin-left: 36px;
+}
+
+.hangman a {
+    text-decoration: none;
+    color: white;
+}
+
+.hangman a:hover {
+    text-decoration: underline;
+    color: white;
+}
+
+.hangman > a > h2 {
+    border: 0;
+    position: relative;
+    top: 130px;
+    width: 100%;
+    text-align: center;
+    height: 60px;
+    font-size: 25px;
+    line-height: 60px;
+    background: #4aaaa5;
+    color: white;
+    font-weight: normal;
+}
+
+.portfolio-row {
+    border: 0;
+    height: 205px;
+    margin-bottom: 60px;
+}
+
+input {
+    width: 574px;
+    height: 35px;
+    float: left;
+    border: 1px #cccccc solid;
+    padding-left: 10px;
+}
+
+input::placeholder {
+    color: #cccccc;
+}
+
+label:not(:first-child) {
+    float: left;
+    margin-top: 20px;
+    display: inline-block
+}
+textarea {
+    float: left;
+    margin: 10px 0 20px;
+    display: inline-block
+    border: 1px #cccccc solid;
+    color: #cccccc;
+    padding-left: 10px;
+    width: 574px;
+}
+
+#submit {
+    width: 115px;
+    background: #4aaaa5;
+    border: 0;
+    color: white;
+    font-size: 17px;
+    margin-bottom: 40px;
+}
