--- a/assets/css/style-fixed.css
+++ b/assets/css/style-fixed.css
@@ -166,7 +166,17 @@ footer {
     margin-left: 36px;
 }
 
-.hangman > h2 {
+.hangman a {
+    text-decoration: none;
+    color: white;
+}
+
+.hangman a:hover {
+    text-decoration: underline;
+    color: white;
+}
+
+.hangman > a > h2 {
     border: 0;
     position: relative;
     top: 130px;
@@ -184,4 +194,40 @@ footer {
     border: 0;
     height: 205px;
     margin-bottom: 60px;
+}
+
+input {
+    width: 574px;
+    height: 35px;
+    float: left;
+    border: 1px #cccccc solid;
+    padding-left: 10px;
+}
+
+input::placeholder {
+    color: #cccccc;
+}
+
+label:not(:first-child) {
+    float: left;
+    margin-top: 20px;
+    display: inline-block
+}
+textarea {
+    float: left;
+    margin: 10px 0 20px;
+    display: inline-block
+    border: 1px #cccccc solid;
+    color: #cccccc;
+    padding-left: 10px;
+    width: 574px;
+}
+
+#submit {
+    width: 115px;
+    background: #4aaaa5;
+    border: 0;
+    color: white;
+    font-size: 17px;
+    margin-bottom: 40px;
 }
