--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,12 +225,12 @@ input::placeholder {
 label:not(:first-child) {
     float: left;
     margin-top: 20px;
-    display: inline-block
+    display: inline-block;
 }
 textarea {
     float: left;
     margin: 10px 0 20px;
-    display: inline-block
+    display: inline-block;
     border: 1px #cccccc solid;
     color: #cccccc;
     padding-left: 10px;
