Corrected Some minor Errors

--- a/assets/css/style-fixed.css
+++ b/assets/css/style-fixed.css
@@ -211,16 +211,20 @@ input::placeholder {
 label:not(:first-child) {
     float: left;
     margin-top: 20px;
-    display: inline-block
+    display: inline-block;
 }
 textarea {
     float: left;
     margin: 10px 0 20px;
-    display: inline-block
+    display: inline-block;
     border: 1px #cccccc solid;
     color: #cccccc;
     padding-left: 10px;
-    width: 574px;
+    width: 572px;
+}
+
+textarea::placeholder {
+    color: #cccccc;
 }
 
 #submit {
