Added Pointer to Submit in CSS x4

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,8 +239,12 @@ input::placeholder {
     color: #cccccc;
 }
 
+label {
+	float: left;
+	margin-bottom: 5px;
+}
+
 label:not(:first-child) {
-    float: left;
     margin-top: 20px;
     display: inline-block;
 }
